fixed stats overflow

--- a/components/searchfilter.module.scss
+++ b/components/searchfilter.module.scss
@@ -1,7 +1,8 @@
 
 .input {
     position: relative;
-    width: 300px;
+    max-width: 100%;
+    width: inherit;
     height: 30px;
     padding: 10px 20px;
     font-family: Helvetica, sans-serif;
